updated new-post.html with a better H1 and P

--- a/new-post.html
+++ b/new-post.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEWS ALERT</title>
 </head>
-<h1> A3 index </h1>
-<p> additional index in the html </p>
+<h1> Create Post </h1>
+<p> additional index in the html for new post </p>
 <body>
     
 </body>
