--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Blog Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="new-post.html">
+    <link rel="stylesheet" href="post.html">
+    <link rel="stylesheet" href="project-plan.txt"
+    >
 </head>
 <body>
     <h1> DBW </h1>
