made sure everything was up to date on the index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="new-post.html">
     <link rel="stylesheet" href="post.html">
+    <link rel="stylesheet" href="project-plan.txt"
+    >
 </head>
 <body>
     <h1> DBW </h1>
