--- a/new-post.html
+++ b/new-post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEWS ALERT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <h1> Create Post </h1>
 <p> additional index in the html for new post </p>
